fixed view cv box overlap style

--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -92,7 +92,6 @@
 
     .download-cv {
         margin-top: 2rem;
-        z-index: 10;
         cursor: pointer;
         transition: all 0.4s ease-in;
 
